fix case layouts causing font size to be too large

--- a/_app/sass/modules/_hero-parallax.scss
+++ b/_app/sass/modules/_hero-parallax.scss
@@ -123,7 +123,7 @@ $parallax-background-height: $parallax-window-height * 2;
     text-shadow: 1px 1px 1px #000000;
     text-align: left;
     @include media($large-screen) {
-      font-size: 2em;
+      //font-size: 2em;
       font-size: 2.8em;
     }
   }
